--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.24.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "debug": "^4.3.4",
     "formik": "^1.5.8",
     "moment": "^2.24.0",
     "react": "^16.14.0",
@@ -18,11 +19,12 @@
     "react-image-gallery": "^1.2.8",
     "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "react-simple-image-slider": "^2.4.1",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.5",
     "yup": "^0.27.0"
   },
   "proxy": "http://localhost:8092",
